Fixed Frontend Stylings in OBO-Blocks - Added Proper design and animations to category tabs in Blockly - Fixed Repeaed errors in terminal output - Improved Overall UI/UX of the OBO-Blocks application - Refactored Codebase for better maintainability and readability

--- a/apps/obo-blocks/src/styles/globals.css
+++ b/apps/obo-blocks/src/styles/globals.css
@@ -350,7 +350,7 @@ body {
 }
 
 .blocklyToolboxDiv {
-  background-color: #f3f3f3;
+  background-color: #ffffff; /* Changed from ash #f3f3f3 to white */
 }
 
 /* Makes our label white. */
